[package]
name = "graph-io-gml"
version = "0.2.0"
authors = ["Michael Neumann <mneumann@ntecs.de>"]
license = "MIT"
repository = "https://github.com/mneumann/gml-rs"
description = "GML (Graph Modelling Language) loader"
keywords = ["graph", "io", "gml"]

include = ["src/lib.rs", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]

asexp = "0.3"
petgraph = "0.4"
